--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "server.js",
+	"proxy": "https://chatix-bd.vercel.app",
 	"scripts": {
 		"server": "nodemon server.js",
 		"start": "node server.js"
